--- a/codingchallenge/task3/index.html
+++ b/codingchallenge/task3/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="assignment.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
